<?xml version="1.0" encoding="utf-8"?>
<!-- justin chipman n01598472 -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--edit text for adding course name-->
    <EditText
        android:id="@+id/jusidEdtCourseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/jusidBtnSave"
        android:layout_toLeftOf="@id/jusidBtnSave"
        android:hint="@string/enter_course_name" />

    <!--edit text for adding course description-->
    <EditText
        android:id="@+id/jusidEdtCourseDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/jusidEdtCourseName"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_toLeftOf="@id/jusidBtnAdd"
        android:hint="@string/enter_course_description" />

    <!--button for adding data to recycler view-->
    <Button
        android:id="@+id/jusidBtnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/jusidEdtCourseName"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:text="@string/add" />

    <!--button for saving data to shared prefs-->
    <Button
        android:id="@+id/jusidBtnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/jusidBtnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/jusidEdtCourseDescription"
        android:layout_margin="10dp"
        android:text="@string/delete" />

    <!--recycler view to display our data-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/jusidRVCourses"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/jusidBtnDelete" />

</RelativeLayout>
